<!--
  ~ Copyright (c) 2016 Fabio Berta.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name" translatable="false">Stock Hawk</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change units</string>
    <string name="dialog_title_symbol_search">Add stock symbol</string>
    <string name="dialog_message_symbol_search">Search and add new stock symbol</string>
    <string name="hint_stock_symbol">Stock symbol</string>
    <string name="widget_title">My stock symbols</string>
    <string name="snackbar_error_no_network">No internet connection</string>
    <string name="snackbar_error_no_network_out_of_date">No internet connection. Quotes may be out of date!</string>
    <string name="snackbar_error_add_stock_already_saved">This stock symbol is already saved</string>
    <string name="snackbar_error_add_stock">Failed to add new stock symbol</string>
    <string name="snackbar_stock_added">Added new stock symbol</string>
    <string name="progress_loading_my_stocks">Loading stock symbols…</string>
    <string name="snackbar_error_unknown">Unknown error occurred</string>
    <string name="snackbar_error_add_stock_not_found">Stock symbol not found</string>
    <string name="snackbar_error_stock_details">Failed to load stock symbol details</string>
    <string name="progress_loading_details">Loading stock symbol details…</string>
    <string name="desc_my_stocks_add_fab">Find and save new stock symbol</string>
    <string name="desc_stock_value_time">Value over last 6 month</string>
    <string name="progress_saving_symbol">Saving new stock symbol…</string>
    <string name="stock_details_empty">No details available</string>
    <string name="my_stock_empty">No stock symbols saved</string>
    <string name="snackbar_error_delete_stock">Failed to delete stock symbol</string>
    <string name="pref_sync_title">Enable periodic update</string>
    <string name="pref_sync_interval_title">Update interval</string>
    <string name="pref_default_symbols_title">Enable default stock symbols</string>
    <string name="pref_default_symbols_summ">Load default stock symbols on empty list</string>
    <string name="pref_sync_interval_15">Every 15 minutes</string>
    <string name="pref_sync_interval_30">Every 30 minutes</string>
    <string name="pref_sync_interval_60">Every hour</string>
    <string name="pref_sync_interval_120">Every 2 hours</string>
    <string name="pref_sync_interval_1440">Every day</string>
    <string name="snackbar_error_google_play_services">Google Play Services error</string>
    <string name="snackbar_error_update_stocks">Failed to update stock quotes. They may be out of date!</string>
</resources>
